--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="header">
         <div class="mainNav">
-            <div class="fslogo"><img src="oicImages/fslogo1.png" alt="Fullstack Logo"></div>
+            <div class="fslogo"><a href="index.html"><img src="oicImages/fslogo1.png" alt="Fullstack Logo"></a></div>
             <div class="nav">
                 <ul class="nav-ul1">
                     <li><a href="#">Home</a></li>
